--- a/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,19 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<!--初始化context参数 -->
-	<context-param>
+	 <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/spring-mybatis.xml</param-value>
 	</context-param>
-	<!-- 配置listen -->
+<!-- 配置listen -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+		
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-	</listener>
-	<!-- 配置filter -->
+	</listener>  
+<!-- 	配置filter -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -27,20 +28,21 @@
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<!-- servlet配置 -->
+	</filter-mapping>  
+<!-- 	servlet配置 -->
 	<servlet>
 		<servlet-name>SpringMVC</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring/spring-mvc</param-value>
+			<param-value>classpath:spring/spring-mvc.xml</param-value>
 		</init-param>
-	</servlet>
+		<load-on-startup>1</load-on-startup>
+	</servlet> 
 	<!-- 会话超时 -->
 	<session-config>
 		<session-timeout>120</session-timeout>
-	</session-config>
+	</session-config> 
 	<display-name>book-manager-web</display-name>
 	<!-- 欢迎界面 -->
 	<welcome-file-list>
