--- a/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -3,20 +3,21 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
+	<display-name>book-manager</display-name>
 	<!--初始化context参数 -->
-	 <context-param>
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/spring-mybatis.xml</param-value>
 	</context-param>
-<!-- 配置listen -->
+	<!-- 配置listen -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-		
+
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
-	</listener>  
-<!-- 	配置filter -->
+	</listener>
+	<!-- 配置filter -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -28,8 +29,8 @@
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>  
-<!-- 	servlet配置 -->
+	</filter-mapping>
+	<!-- servlet配置 -->
 	<servlet>
 		<servlet-name>SpringMVC</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -38,12 +39,16 @@
 			<param-value>classpath:spring/spring-mvc.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
-	</servlet> 
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SpringMVC</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 	<!-- 会话超时 -->
 	<session-config>
 		<session-timeout>120</session-timeout>
-	</session-config> 
-	<display-name>book-manager-web</display-name>
+	</session-config>
+
 	<!-- 欢迎界面 -->
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
