--- a/book-manager/book-manager-web/pom.xml
+++ b/book-manager/book-manager-web/pom.xml
@@ -83,6 +83,14 @@
 			<groupId>com.github.sgroschupf</groupId>
 			<artifactId>zkclient</artifactId>
 		</dependency>
+		<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis-spring</artifactId>
+				</dependency>
+				<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis</artifactId>
+			</dependency>
   </dependencies>
    <build>
       <plugins>
