--- a/book-manager/book-manager-web/pom.xml
+++ b/book-manager/book-manager-web/pom.xml
@@ -14,6 +14,11 @@
     <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+       <groupId>com.book</groupId>
+    <artifactId>book-manager-service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
 				<groupId>jstl</groupId>
 				<artifactId>jstl</artifactId>
 				</dependency>
