--- a/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -44,6 +44,24 @@
 		<servlet-name>SpringMVC</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping> 
+      	<servlet-name>default</servlet-name>  
+      	<url-pattern>*.jpg</url-pattern>  
+	</servlet-mapping>  
+
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.gif</url-pattern> 
+	</servlet-mapping>  
+	
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.css</url-pattern> 
+	</servlet-mapping>  
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.js</url-pattern> 
+	</servlet-mapping> 
 	<!-- 会话超时 -->
 	<session-config>
 		<session-timeout>120</session-timeout>
