--- a/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/book-manager/book-manager-web/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,18 @@
 	    <servlet-name>default</servlet-name> 
 	    <url-pattern>*.js</url-pattern> 
 	</servlet-mapping> 
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.tff</url-pattern> 
+	</servlet-mapping> 
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.woff</url-pattern> 
+	</servlet-mapping> 
+	<servlet-mapping> 
+	    <servlet-name>default</servlet-name> 
+	    <url-pattern>*.woff2</url-pattern> 
+	</servlet-mapping> 
 	<!-- 会话超时 -->
 	<session-config>
 		<session-timeout>120</session-timeout>
